adding the ability to check current account balance
